# python-project-lvl2

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  engine.py
gendiff/lib/: cli.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py
tests/fixtures/: file1.yaml
